--- a/_posts/2012-03-20-sp_help.md
+++ b/_posts/2012-03-20-sp_help.md
@@ -4,9 +4,7 @@ title: sp_help_table_schemas
 published: true
 ---
 
-!!! Warning
-
-This is now built it to later versions of __SQL Server Management Studio (SSMS)__
+## Note - This is now built it to later versions of __SQL Server Management Studio (SSMS)__
 
 [sp_help_table_schemas.sql]({{site.baseurl}}/attachments/sp_help_table_schemas.sql)
 
@@ -24,7 +22,7 @@ On a long train journey back to York I wondered if I could solve this problem by
 
 My version works by first checking the system tables to find out which schemas the table belongs to
 
-``` SQL
+```sql
 SELECT s.Name   --Find the schema
  FROM sys.schemas s
  JOIN sys.tables t on t.schema_id = s.schema_id
@@ -33,7 +31,7 @@ SELECT s.Name   --Find the schema
 
  It then dynamically calls the standard __sp_help__ method but this time supplying the table owner as well.
 
-``` SQL
+```sql
  SET @cmd = 'EXEC sp_help ''' + QUOTENAME(@SchemaName) + '.' + QUOTENAME(@ObjectName) + ''' ;' ;           
 EXEC ( @cmd )
 ```
