--- a/blog_posts/2018-07-22-Cake.md
+++ b/blog_posts/2018-07-22-Cake.md
@@ -1,7 +1,8 @@
----
-layout: post
-title: Using Cake With TeamCity
----
+START_META
+DATE: 2012-07-22
+TITLE: Using Cake With TeamCity
+END_META
+
 
 We have been successfully using TeamCity to build one of our main products for the last year.  Although we were fairly happy with the process there was a few concerns around the solution.
 
