--- a/blog_posts/2019-01-09-Blog.md
+++ b/blog_posts/2019-01-09-Blog.md
@@ -1,7 +1,8 @@
----
-layout: post
-title: Setting up DavidBetteridge.net
----
+START_META
+DATE: 2019-01-09
+TITLE: Setting up DavidBetteridge.net
+END_META
+
 
 Some notes so that I remember what I did!
 
